Task 3.4 - Adding Security: basic task: Added security to the project