@@ -1,9 +1,13 @@
 package ua.foxminded.universitycms.controller;
 
+import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
+import org.springframework.http.HttpStatus;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,11 +15,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import ua.foxminded.universitycms.dto.CourseDto;
-import ua.foxminded.universitycms.exception.ServiceException;
+import ua.foxminded.universitycms.exception.CustomHttpException;
+import ua.foxminded.universitycms.exception.UserNotFoundException;
+import ua.foxminded.universitycms.model.enumeration.RoleName;
+import ua.foxminded.universitycms.security.userdetails.CustomUserDetails;
 import ua.foxminded.universitycms.service.CourseService;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 
 /**
@@ -25,32 +31,14 @@ import java.util.Optional;
  * @author Serhii Bohdan
  */
 @Controller
+@RequiredArgsConstructor
 @RequestMapping("/ui/v1/courses")
 public class CourseController {
-
-    /**
-     * The attribute name used to store error flag in the model.
-     */
-    private static final String HAS_ERROR = "hasError";
-
-    /**
-     * A dummy student ID used for retrieving user courses.
-     */
-    private static final long STUDENT_ID = 60;
 
     /**
      * The {@link CourseService} used to interact with course data.
      */
     private final CourseService courseService;
-
-    /**
-     * Constructs a new {@code CourseController} instance with the given {@link CourseService}.
-     *
-     * @param courseService the {@link CourseService} to use for course-related operations
-     */
-    public CourseController(CourseService courseService) {
-        this.courseService = courseService;
-    }
 
     /**
      * Retrieves a page of course data for display and populates the model with necessary attributes.
@@ -65,20 +53,12 @@ public class CourseController {
      * @return the logical view name "courses/all-courses" representing the course list template
      */
     @GetMapping
+    @PreAuthorize("hasAuthority('COURSES_READ')")
     public String getPageWithCourses(Model model, @RequestParam(name = "keyword", required = false) String keyword,
                                      @PageableDefault Pageable pageable) {
-        Page<CourseDto> coursesPage = new PageImpl<>(new ArrayList<>());
-        boolean hasError = false;
-
-        try {
-            if (Objects.nonNull(keyword) && !keyword.isBlank()) {
-                coursesPage = courseService.getCourseByNameInPage(keyword, pageable);
-            } else {
-                coursesPage = courseService.getAllCoursesInPage(pageable);
-            }
-        } catch (ServiceException e) {
-            hasError = true;
-        }
+        Page<CourseDto> coursesPage = StringUtils.isBlank(keyword)
+            ? courseService.getAllCoursesInPage(pageable)
+            : courseService.getCourseByNameInPage(keyword, pageable);
 
         model.addAttribute("allNamesOfCourses", courseService.getAllNamesOfCourses())
             .addAttribute("courses", coursesPage.getContent())
@@ -86,42 +66,52 @@ public class CourseController {
             .addAttribute("totalItems", coursesPage.getTotalElements())
             .addAttribute("totalPages", coursesPage.getTotalPages())
             .addAttribute("size", pageable.getPageSize())
-            .addAttribute("keyword", keyword)
-            .addAttribute(HAS_ERROR, hasError);
+            .addAttribute("keyword", keyword);
 
         return "courses/all-courses";
     }
 
     /**
-     * Renders a page containing a list of courses enrolled by the user, optionally filtered by a keyword.
-     * This method handles GET requests to `/ui/v1/courses/my`.
+     * Retrieves a page of courses for the currently authenticated user, optionally filtered by a keyword.
+     * <p>
+     * This method handles GET requests to the "/my" endpoint under the "/ui/v1/courses" path. It determines the user's role
+     * (either teacher or student) from the `customUserDetails` and fetches the courses accordingly, filtered by the provided `keyword` if present.
+     * <p>
+     * It adds the retrieved courses, a list of course names, the search keyword (if any), and an error flag (if an error occurred during retrieval) to the model.
      *
-     * @param model   the Spring MVC {@link Model} object used to pass data to the view
-     * @param keyword an optional keyword to filter user courses by name (can be empty)
-     * @return the logical name of the view template ("courses/user-courses")
+     * @param model             the Spring MVC Model object used to store data for the view
+     * @param customUserDetails the details of the currently authenticated user
+     * @param keyword           an optional search keyword for filtering courses by name (can be blank)
+     * @return the logical view name "courses/user-courses" representing the user's course list template
      */
     @GetMapping("/my")
-    public String getPageWithCoursesForUser(Model model, @RequestParam(name = "keyword", required = false) String keyword) {
+    @PreAuthorize("hasAuthority('COURSES_READ')")
+    public String getPageWithCoursesForUser(Model model, @AuthenticationPrincipal CustomUserDetails customUserDetails,
+                                            @RequestParam(name = "keyword", required = false) String keyword) {
         List<CourseDto> userCourses = new ArrayList<>();
-        List<String> userCoursesNames = new ArrayList<>();
-        boolean hasError = false;
 
         try {
-            userCoursesNames = courseService.getStudentCoursesNames(STUDENT_ID);
+            boolean isKeywordNotCorrect = StringUtils.isBlank(keyword);
+            Long userId = customUserDetails.getId();
+            RoleName userRole = customUserDetails.getRoleName();
 
-            if (Objects.nonNull(keyword) && !keyword.isBlank()) {
-                userCourses = courseService.getStudentCourseByCourseName(STUDENT_ID, keyword);
-            } else {
-                userCourses = courseService.getStudentCourses(STUDENT_ID);
+            if (RoleName.TEACHER.equals(userRole)) {
+                userCourses = isKeywordNotCorrect
+                    ? courseService.getTeacherCourses(userId)
+                    : courseService.getTeacherCourseByCourseName(userId, keyword);
+            } else if (RoleName.STUDENT.equals(userRole)) {
+                userCourses = isKeywordNotCorrect
+                    ? courseService.getStudentCourses(userId)
+                    : courseService.getStudentCourseByCourseName(userId, keyword);
             }
-        } catch (ServiceException e) {
-            hasError = true;
+        } catch (UserNotFoundException e) {
+            throw new CustomHttpException(e.getHttpStatus(), "Unable to display courses, user information is missing");
         }
 
+        List<String> userCoursesNames = courseService.getCoursesNames(userCourses);
         model.addAttribute("userCoursesNames", userCoursesNames)
             .addAttribute("userCourses", userCourses)
-            .addAttribute("keyword", keyword)
-            .addAttribute(HAS_ERROR, hasError);
+            .addAttribute("keyword", keyword);
 
         return "courses/user-courses";
     }
@@ -137,16 +127,14 @@ public class CourseController {
      * @return the logical name of the view template ("courses/course")
      */
     @GetMapping("/my/{courseId}")
+    @PreAuthorize("hasAuthority('COURSES_READ')")
     public String getPageWithSpecificCourse(Model model, @PathVariable("courseId") long courseId) {
         Optional<CourseDto> optional = courseService.getById(courseId);
 
         if (optional.isPresent()) {
-            CourseDto course = optional.get();
-            model.addAttribute("course", course)
-                .addAttribute("authorName", courseService
-                    .getAuthorFullNameByTeacherId(course.getAuthorId()));
+            model.addAttribute("course", optional.get());
         } else {
-            model.addAttribute(HAS_ERROR, true);
+            throw new CustomHttpException(HttpStatus.NOT_FOUND, "Course not found");
         }
 
         return "courses/course";
