@@ -1,19 +1,18 @@
 package ua.foxminded.universitycms.controller;
 
+import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import ua.foxminded.universitycms.dto.GroupDto;
-import ua.foxminded.universitycms.exception.ServiceException;
 import ua.foxminded.universitycms.service.GroupService;
-import java.util.ArrayList;
-import java.util.Objects;
 
 /**
  * This Spring Boot Web Controller handles requests related to managing and displaying groups.
@@ -22,6 +21,7 @@ import java.util.Objects;
  * @author Serhii Bohdan
  */
 @Controller
+@RequiredArgsConstructor
 @RequestMapping("/ui/v1/groups")
 public class GroupController {
 
@@ -29,15 +29,6 @@ public class GroupController {
      * The {@link GroupService} used to interact with group data.
      */
     private final GroupService groupService;
-
-    /**
-     * Constructs a new {@code GroupController} instance with the given {@link GroupService}.
-     *
-     * @param groupService the {@link GroupService} to use for group-related operations
-     */
-    public GroupController(GroupService groupService) {
-        this.groupService = groupService;
-    }
 
     /**
      * Retrieves a page of group data for display and populates the model with necessary attributes.
@@ -52,20 +43,12 @@ public class GroupController {
      * @return the logical view name "groups/all-groups" representing the group list template
      */
     @GetMapping
+    @PreAuthorize("hasAuthority('GROUPS_READ')")
     public String getPageWithGroups(Model model, @RequestParam(name = "keyword", required = false) String keyword,
                                     @PageableDefault Pageable pageable) {
-        Page<GroupDto> groupsPage = new PageImpl<>(new ArrayList<>());
-        boolean hasError = false;
-
-        try {
-            if (Objects.nonNull(keyword) && !keyword.isBlank()) {
-                groupsPage = groupService.getGroupInPageByName(keyword, pageable);
-            } else {
-                groupsPage = groupService.getGroupsPage(pageable);
-            }
-        } catch (ServiceException e) {
-            hasError = true;
-        }
+        Page<GroupDto> groupsPage = StringUtils.isBlank(keyword)
+                ? groupService.getGroupsPage(pageable)
+                : groupService.getGroupInPageByName(keyword, pageable);
 
         model.addAttribute("allNamesOfGroups", groupService.getAllNamesOfGroups())
             .addAttribute("groups", groupsPage.getContent())
@@ -73,8 +56,7 @@ public class GroupController {
             .addAttribute("totalItems", groupsPage.getTotalElements())
             .addAttribute("totalPages", groupsPage.getTotalPages())
             .addAttribute("size", pageable.getPageSize())
-            .addAttribute("keyword", keyword)
-            .addAttribute("hasError", hasError);
+            .addAttribute("keyword", keyword);
 
         return "groups/all-groups";
     }
